--- a/9_CssBackgroundWork/lesson.html
+++ b/9_CssBackgroundWork/lesson.html
@@ -8,18 +8,53 @@
 </head>
 
 <body>
+
+	<ul class="list">
+		<li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio voluptatem laboriosam asperiores exercitationem
+			alias esse atque consectetur voluptatibus aperiam magnam ad consequatur nesciunt, facilis dolor ab ipsam
+			distinctio, consequuntur minima eos dolore? Earum, reiciendis omnis laboriosam eveniet eaque perferendis odio
+			dolor expedita esse, enim quas inventore adipisci incidunt ab? Ut minima officia, non aut sint quaerat optio
+			reiciendis nesciunt eveniet animi facilis deleniti magnam magni quisquam amet fugiat qui voluptatum repellat,
+			veniam voluptatem exercitationem, sit placeat voluptate? Veniam saepe voluptatum quas perspiciatis, nesciunt
+			nostrum error temporibus voluptatem quis ea necessitatibus enim natus ab deleniti sed neque quod tempora aut in
+			distinctio veritatis cumque libero repellendus! Illum, molestiae? Illum voluptatibus accusamus laudantium!
+			Magnam doloribus in, voluptate molestias vero nisi illum quod quas omnis corrupti, voluptatem quae nam cum
+			ratione quis soluta pariatur placeat obcaecati quia! Eligendi pariatur error est, totam ipsa iste soluta fuga
+			ab beatae aperiam labore in maxime. Quia officia neque alias asperiores ab molestias, enim voluptate temporibus
+			error earum mollitia magnam fuga aut similique placeat quisquam labore culpa esse harum illo blanditiis! Labore
+			veniam consequuntur dolore odio magni obcaecati excepturi perferendis sunt fugit magnam, rerum quae, tenetur
+			similique eius nam blanditiis illo adipisci vitae velit dolores, omnis tempora earum ex! Necessitatibus itaque
+			vel cupiditate nulla quidem aliquid, fugit ipsam? Accusantium ipsum hic molestias totam cumque. Doloribus nam
+			recusandae iusto aliquam nobis quas animi enim voluptatibus nisi quod reprehenderit nihil corrupti dolor,
+			numquam architecto ullam vel fuga! Quod, consequatur. Debitis ratione aliquid animi, delectus accusantium
+			optio, quae neque asperiores consequatur, minima similique enim deleniti voluptatem. Vel nemo commodi placeat
+			nihil voluptatem. Inventore tenetur eligendi ipsum dignissimos eaque voluptatibus hic sed iste ea impedit
+			incidunt, harum totam magni? Tempore perspiciatis pariatur, cum magnam culpa sequi optio minima error in
+			molestiae ducimus fuga excepturi corporis officia recusandae totam fugiat assumenda labore hic nobis.
+			Aspernatur debitis, illum consectetur temporibus voluptate eaque deleniti modi vero in molestias itaque
+			mollitia dicta ipsa quam ut dolore quisquam ipsam quos voluptates similique autem magnam? Adipisci unde vel,
+			repellendus, at rem reprehenderit quas possimus harum commodi illum labore numquam minus! Possimus, iusto.
+			Animi aperiam ut soluta expedita sunt consequatur excepturi ullam voluptas dolor debitis quod, pariatur illo
+			quas qui saepe, facilis accusamus deleniti fugiat dignissimos laboriosam amet accusantium iure ratione? Porro
+			totam accusantium debitis reprehenderit, modi fuga assumenda? Eaque neque minus ipsam nostrum corrupti numquam
+			sapiente optio saepe eveniet voluptates delectus quae iste sed, possimus illo vero veritatis nulla ad, quos
+			quasi. Numquam, aspernatur reiciendis deserunt similique laborum accusantium molestias, deleniti, modi
+			voluptatem impedit dolore nemo nobis aliquam aperiam soluta cum eveniet. Ea iusto asperiores ipsum, magnam
+			beatae at in corporis provident laborum consequuntur doloribus ducimus. Dolores culpa soluta, deleniti
+			distinctio, asperiores eum expedita repellendus assumenda laudantium nobis quidem est eos nulla vel accusantium
+			mollitia tenetur. Ad quam et vero nulla quidem, magnam blanditiis alias possimus nesciunt ducimus voluptas
+			perferendis sit natus minima, illum magni facilis in? Quo quae error, vel vitae animi aliquid eveniet excepturi
+			eius alias possimus commodi aperiam? Totam officia odit voluptates quibusdam suscipit.</li>
+		<li>lorem</li>
+		<li>lorem</li>
+		<li>lorem</li>
+		<li>lorem</li>
+	</ul>
+
 	<div class="block">
 
 	</div>
 
-	<div>
-		<div>
-
-		</div>
-	</div>
-
-
 </body>
-
 
 </html>
