add new homework

--- a/10_CssPseudoWork/lesson.html
+++ b/10_CssPseudoWork/lesson.html
@@ -8,7 +8,38 @@
 </head>
 
 <body>
-
+	<div class="block">
+		<p>
+			<a href="#" class="link">Lorem</a> ipsum dolor sit amet consectetur adipisicing elit. Debitis nam asperiores
+			laborum vel, sint reprehenderit eius doloribus quis. Nam molestiae neque ipsa ipsum
+			minus quisquam perferendis quod, quasi aspernatur mollitia ea natus, fugit quo corrupti
+			sed. Libero, impedit optio architecto adipisci ipsam, ipsum fuga voluptatibus voluptate
+			excepturi consequuntur cum ducimus!
+		</p>
+		<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis nam asperiores
+			laborum vel, sint reprehenderit eius doloribus quis. Nam molestiae neque ipsa ipsum
+			minus quisquam perferendis quod, quasi aspernatur mollitia ea natus, fugit quo corrupti
+			sed. Libero, impedit optio architecto adipisci ipsam, ipsum fuga voluptatibus voluptate
+			excepturi consequuntur cum ducimus!
+		</p>
+		<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis nam asperiores
+			laborum vel, sint reprehenderit eius doloribus quis. Nam molestiae neque ipsa ipsum
+			minus quisquam perferendis quod, quasi aspernatur mollitia ea natus, fugit quo corrupti
+			sed. Libero, impedit optio architecto adipisci ipsam, ipsum fuga voluptatibus voluptate
+			excepturi consequuntur cum ducimus!
+		</p>
+	</div>
+	<form action="#">
+		<input type="text" class="textInput" />
+		<button type="submit" class="textButton">Отправить</button>
+	</form>
+	<ul class="list">
+		<li>text</li>
+		<li>text</li>
+		<li>text</li>
+		<li>text</li>
+		<li>text</li>
+	</ul>
 </body>
 
 </html>
