add html academy cource data

--- a/10_CssPseudo_HomeWork/lesson.html
+++ b/10_CssPseudo_HomeWork/lesson.html
@@ -8,23 +8,30 @@
 </head>
 
 <body>
-
-	<ul class="standard-list">
-		<li>Put on this page information about your product</li>
-		<li>A detailed description of your product</li>
-		<li>Tell us about the advantages and merits</li>
-		<li>Associate the page with the payment system</li>
-	</ul>
-
-	<ul class="hovered-list">
-		<li>Put on this page information about your product</li>
-		<li>A detailed description of your product</li>
-		<li>Tell us about the advantages and merits</li>
-		<li>Associate the page with the payment system</li>
-	</ul>
-
-	<button class="fullstory-button">Full Story</button>
-	<input type="text" class="input-text" />
+	<div class="element">
+		<ul class="pseudostyled-list">
+			<li>Put on this page information about your product</li>
+			<li>A detailed description of your product</li>
+			<li>Tell us about the advantages and merits</li>
+			<li>Associate the page with the payment system</li>
+		</ul>
+	</div>
+	<div class="element">
+		<ul class="hovercolored-list">
+			<li>Put on this page information about your product</li>
+			<li>A detailed description of your product</li>
+			<li>Tell us about the advantages and merits</li>
+			<li>Associate the page with the payment system</li>
+		</ul>
+	</div>
+	<div class="element">
+		<button type="submit" class="fullstory-button">Full Story
+			<img class="buttonarrow-image" src="img/icons/right-arrow.png">
+		</button>
+	</div>
+	<div class="element">
+		<input type="text" class="input-text" />
+	</div>
 
 </body>
 
