--- a/2_MySkillsPage/index.html
+++ b/2_MySkillsPage/index.html
@@ -1,106 +1,143 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <title>Учим технологии</title>
-        <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
-    </head>
-    <body>
-        <h1>Навыки, которые мне необходимо подтянуть</h1>
 
-        <h2>C#</h2>
-        <h3>Общие навыки C#</h3>
-        <ul>
-            <li>Обработка исключений</li>
-            <li>Entity Framework (на уровне понимания миграций, работы с данными, отличие IQuereable и IEnumerable, работа с процедурами и оптимизация)</li>
-            <li>Алгоритмы и структуры данных (правильный выбор структур данных в зависимости от задачи, как влияет выбор структуры на затраты ОЗУ и ЦП)</li>
-            <li>LINQ to Objects, LINQ to SQL</li>
-            <li>Паттерны! (DI, Events and Sourcing, CQRS, Publisher-Subscriber)</li>
-            <li>Микросервисная и Чистая архитектура, N-layer</li>
-        </ul>
+<head>
+	<title>Учим технологии</title>
+	<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
+	<link rel="shortcut icon" href="img/icons/favicon.ico">
+</head>
 
-        <h3>Веб направление</h3>
-        <ul>
-            <li>MVC</li>
-            <li>HTML, CSS, верстка по макету</li>
-            <li>JS</li>
-            <li>Какой-нибудь фронтенд фреймворк (Vue, React, Angular)</li>
-        </ul>
+<body>
+	<h1>Навыки, которые мне необходимо подтянуть</h1>
 
-        <h3>Десктоп направление</h3>
-        <ul>
-            <li>Посмотреть ElectronJS после понимания JS</li>
-        </ul>
+	<h2>C#</h2>
+	<h3>Общие навыки C#</h3>
+	<ul>
+		<li>Обработка исключений</li>
+		<li>Entity Framework (на уровне понимания миграций, работы с данными, отличие IQuereable и IEnumerable, работа с
+			процедурами и оптимизация)</li>
+		<li>Алгоритмы и структуры данных (правильный выбор структур данных в зависимости от задачи, как влияет выбор
+			структуры на затраты ОЗУ и ЦП)</li>
+		<li>LINQ to Objects, LINQ to SQL</li>
+		<li>Паттерны! (DI, Events and Sourcing, CQRS, Publisher-Subscriber)</li>
+		<li>Микросервисная и Чистая архитектура, N-layer</li>
+	</ul>
 
-        <h3>Смежные технологии</h3>
-        <ul>
-            <li>Docker</li>
-            <li>Kubernetes</li>
-            <li>RabbitMQ</li>
-            <li>Парочка ORM, NHibernate, Dapper</li>
-            <li>Autofac</li>
-        </ul>
+	<h3>Веб направление</h3>
+	<ul>
+		<li>MVC</li>
+		<li>HTML, CSS, верстка по макету</li>
+		<li>JS</li>
+		<li>Какой-нибудь фронтенд фреймворк (Vue, React, Angular)</li>
+	</ul>
 
-        <h3>Ресурсы</h3>
-        <ul>
-            <li>
-                Обработка исключений:
-                (<a href="https://stackoverflow.com/questions/3151702/discriminated-union-in-c-sharp" target="_blank">Stackoverflow</a>)
-                (<a href="https://metanit.com/sharp/tutorial/3.34.php" target="_blank">Metanit</a>)
-                (<a href="https://github.com/philippranzhin/dispatcher" target="_blank">Github Example</a>)
-            </li>
-            <li>
-                Книги по C#:
-                (<a href="https://ru.stackoverflow.com/questions/416584/Книги-и-учебные-ресурсы-по-c?noredirect=1&lq=1" target="_blank">Stackoverflow</a>)
-            </li>
-            <li>
-                План развития Frontend специалиста:
-                (<a href="https://miro.com/app/board/o9J_l034lZA=/" target="_blank">Frontend Skills Miro Graph</a>)
-            </li>
-        </ul>
+	<h4>Ресурсы</h4>
+	<ul>
+		<li>
+			Методология БЭМ:
+			(<a href="https://ru.bem.info/methodology/quick-start/" target="_blank">BEM Metodology</a>)
+		</li>
+		<li>
+			Шпаргалки по HTML/CSS:
+			(<a href="https://fls.guru" target="_blank">FreelancerLifeStyle</a>)
+		</li>
+		<li>
+			Создание иконок для сайтов:
+			(<a href="https://www.favicon.by" target="_blank">FaviconBy</a>)
+		</li>
+		<li>
+			Академия HTML
+			(<a href="https://htmlacademy.ru" target="_blank">HtmlAcademy</a>)
+		</li>
+		<li>
+			Анализатор PSD макета
+			(<a href="https://www.markupeasy.ru" target="_blank">Marsy</a>)
+		</li>
+		<li>
+			Создание градиента
+			(<a href="https://www.colorzilla.com/gradient-editor/" target="_blank">ColorZilla</a>)
+		</li>
+	</ul>
 
-        <h2>SQL</h2>
-        <h3>Общие знания SQL</h3>
-        <ul>            
-            <li>NoSQL БД</li>
-            <li>Индексы в БД</li>
-            <li>SQL Profiler, выявление дедлоков</li>
-            <li>Анализ запроса через план запроса</li>
-        </ul>
+	<h3>Десктоп направление</h3>
+	<ul>
+		<li>Посмотреть ElectronJS после понимания JS</li>
+	</ul>
 
-        <h2>Unity3D</h2>
-        <h3>Общие знания Unity3D</h3>
-        <ul>            
-            <li>Архитектура в Unity3D</li>
-            <li>Разделение на компоненты, использование Префабов</li>
-            <li>Отделение логики игры от визуального представления и MonoBehaviour</li>
-            <li>Анализ производительности</li>
-        </ul>
+	<h3>Смежные технологии</h3>
+	<ul>
+		<li>Docker</li>
+		<li>Kubernetes</li>
+		<li>RabbitMQ</li>
+		<li>Парочка ORM, NHibernate, Dapper</li>
+		<li>Autofac</li>
+	</ul>
 
-        <h3>Ресурсы</h3>
-        <ul>
-            <li>
-                Официальная документация Unity Learn:
-                (<a href="https://unity.com/how-to/how-architect-code-your-project-scales" target="_blank">How Architect Code</a>)
-            </li>
-            <li>
-                Видео по архитектуре:
-                (<a href="https://www.youtube.com/watch?v=ITnUq2AeC40" target="_blank">Game Stream Advanced Unity Project</a>)
-            </li>
-            <li>
-                Создание многопользовательской игры:
-                (<a href="https://www.youtube.com/watch?v=j2so32ZlMoU" target="_blank">4-Player Online Shooter</a>)
-            </li>
-        </ul>
+	<h3>Ресурсы</h3>
+	<ul>
+		<li>
+			Обработка исключений:
+			(<a href="https://stackoverflow.com/questions/3151702/discriminated-union-in-c-sharp"
+				target="_blank">Stackoverflow</a>)
+			(<a href="https://metanit.com/sharp/tutorial/3.34.php" target="_blank">Metanit</a>)
+			(<a href="https://github.com/philippranzhin/dispatcher" target="_blank">Github Example</a>)
+		</li>
+		<li>
+			Книги по C#:
+			(<a href="https://ru.stackoverflow.com/questions/416584/Книги-и-учебные-ресурсы-по-c?noredirect=1&lq=1"
+				target="_blank">Stackoverflow</a>)
+		</li>
+		<li>
+			План развития Frontend специалиста:
+			(<a href="https://miro.com/app/board/o9J_l034lZA=/" target="_blank">Frontend Skills Miro Graph</a>)
+		</li>
+	</ul>
 
-        <h2>Нерешенные задачи</h2>
-        <ul>
-            <li>Задача по разбивке большого файла на много мелких</li>
-            <li>Задача хранения древовидной структуры в БД</li>
-            <li>Задача по шифрованию строки подключения к БД у клиента</li>
-        </ul>
+	<h2>SQL</h2>
+	<h3>Общие знания SQL</h3>
+	<ul>
+		<li>NoSQL БД</li>
+		<li>Индексы в БД</li>
+		<li>SQL Profiler, выявление дедлоков</li>
+		<li>Анализ запроса через план запроса</li>
+	</ul>
 
-        <h3>Спонсор данной разработки</h3>
-        <img src="img/DesignerUnity.jpg" alt="Картинка осталась в паутине сетей :(">
+	<h2>Unity3D</h2>
+	<h3>Общие знания Unity3D</h3>
+	<ul>
+		<li>Архитектура в Unity3D</li>
+		<li>Разделение на компоненты, использование Префабов</li>
+		<li>Отделение логики игры от визуального представления и MonoBehaviour</li>
+		<li>Анализ производительности</li>
+	</ul>
 
-    </body>
+	<h3>Ресурсы</h3>
+	<ul>
+		<li>
+			Официальная документация Unity Learn:
+			(<a href="https://unity.com/how-to/how-architect-code-your-project-scales" target="_blank">How Architect
+				Code</a>)
+		</li>
+		<li>
+			Видео по архитектуре:
+			(<a href="https://www.youtube.com/watch?v=ITnUq2AeC40" target="_blank">Game Stream Advanced Unity Project</a>)
+		</li>
+		<li>
+			Создание многопользовательской игры:
+			(<a href="https://www.youtube.com/watch?v=j2so32ZlMoU" target="_blank">4-Player Online Shooter</a>)
+		</li>
+	</ul>
+
+	<h2>Нерешенные задачи</h2>
+	<ul>
+		<li>Задача по разбивке большого файла на много мелких</li>
+		<li>Задача хранения древовидной структуры в БД</li>
+		<li>Задача по шифрованию строки подключения к БД у клиента</li>
+	</ul>
+
+	<h3>Спонсор данной разработки</h3>
+	<img src="img/DesignerUnity.jpg" alt="Картинка осталась в паутине сетей :(">
+
+</body>
+
 </html>
