create BEM scss style file

--- a/BEM_Metodology/lesson.html
+++ b/BEM_Metodology/lesson.html
@@ -2,55 +2,56 @@
 <html lang="ru">
 
 <head>
-	<title>CSS. Позиционирование</title>
+	<title>Методология БЭМ</title>
 	<link rel="stylesheet" href="css/lessonStyle.css">
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 </head>
 
 <body>
-
-	<!-- <div class="block">
-		<div class="block__1">
-			Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati cumque eaque nulla minima nihil
-			laboriosam,
-			veritatis quo dignissimos, quia animi quod magnam beatae similique nisi iste omnis natus consectetur at unde
-			deleniti, odio est atque qui quisquam! Maiores expedita eius id in quibusdam nisi explicabo quae dignissimos,
-			enim vero distinctio repudiandae sed sunt odit ad, nam laborum recusandae quo. Explicabo! block__1
+	<div class="about">
+		<div class="about__body">
+			<div class="about__header">
+				<div class="about__title title">ABOUT</div>
+				<div class="about__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore autem excepturi
+					quia optio, expedita enim cum voluptatum iure alias quibusdam?</div>
+			</div>
+			<div class="about__row">
+				<div class="about__column">
+					<div class="item-about">
+						<div class="item-about__icon">
+							<img src="img/about/1.png" alt="">
+						</div>
+						<div class="item-about__title">WEB</div>
+						<div class="item-about__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime
+							repudiandae doloribus fuga aliquid aliquam itaque ducimus quam, accusamus blanditiis perspiciatis.
+						</div>
+					</div>
+				</div>
+				<div class="about__column">
+					<div class="item-about">
+						<div class="item-about__icon">
+							<img src="img/about/2.png" alt="">
+						</div>
+						<div class="item-about__title">WEB</div>
+						<div class="item-about__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime
+							repudiandae doloribus fuga aliquid aliquam itaque ducimus quam, accusamus blanditiis perspiciatis.
+						</div>
+					</div>
+				</div>
+				<div class="about__column">
+					<div class="item-about">
+						<div class="item-about__icon">
+							<img src="img/about/3.png" alt="">
+						</div>
+						<div class="item-about__title">WEB</div>
+						<div class="item-about__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime
+							repudiandae doloribus fuga aliquid aliquam itaque ducimus quam, accusamus blanditiis perspiciatis.
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
-		<div class="block__2">
-			Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati cumque eaque nulla minima nihil
-			laboriosam,
-			veritatis quo dignissimos, quia animi quod magnam beatae similique nisi iste omnis natus consectetur at unde
-			deleniti. block__2
-		</div>
-		<div class="block__3">
-			Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati cumque eaque nulla minima nihil
-			laboriosam,
-			veritatis quo dignissimos, quia animi quod magnam beatae similique nisi iste omnis natus consectetur at unde
-			deleniti, odio est atque qui quisquam! Maiores expedita eius id in quibusdam nisi explicabo quae dignissimos,
-			enim vero distinctio repudiandae sed sunt odit ad, nam laborum recusandae quo. Explicabo! block__3
-		</div>
-	</div> -->
-
-	<ul class="list">
-		<li>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa doloribus ratione odio excepturi error sunt
-			ullam esse laborum sed molestiae quis fuga odit provident, maiores blanditiis veniam quae repellat ex ipsum
-			dolores adipisci at beatae! Deserunt impedit, amet nemo maxime esse, adipisci eum necessitatibus vel enim
-			magni, ad autem. Saepe facilis minus voluptatem asperiores soluta, facere expedita aut alias deleniti?
-		</li>
-		<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-		<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-		<li>
-			Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic vitae officia, sapiente rem molestias harum ut,
-			amet beatae, voluptatem fuga assumenda blanditiis iure quia corporis? Cum voluptates a voluptas pariatur
-			deleniti obcaecati minima molestias optio! Quia aperiam maxime necessitatibus qui dolores soluta eveniet! Iste,
-			facilis blanditiis quod recusandae quia illo quae distinctio ex tempore optio debitis hic voluptates obcaecati
-			molestiae facere alias sapiente fuga natus officiis ut rerum voluptate. Pariatur.
-		</li>
-		<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-	</ul>
-
+	</div>
 </body>
 
 </html>
