--- a/BEM_Metodology/lesson.html
+++ b/BEM_Metodology/lesson.html
@@ -19,9 +19,9 @@
 				<div class="about__column">
 					<div class="item-about">
 						<div class="item-about__icon">
-							<img src="img/about/1.png" alt="">
+							<img src="img/about/01.png" alt="">
 						</div>
-						<div class="item-about__title">WEB</div>
+						<div class="item-about__title">Web</div>
 						<div class="item-about__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime
 							repudiandae doloribus fuga aliquid aliquam itaque ducimus quam, accusamus blanditiis perspiciatis.
 						</div>
@@ -30,9 +30,9 @@
 				<div class="about__column">
 					<div class="item-about">
 						<div class="item-about__icon">
-							<img src="img/about/2.png" alt="">
+							<img src="img/about/02.png" alt="">
 						</div>
-						<div class="item-about__title">WEB</div>
+						<div class="item-about__title">Ios and android</div>
 						<div class="item-about__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime
 							repudiandae doloribus fuga aliquid aliquam itaque ducimus quam, accusamus blanditiis perspiciatis.
 						</div>
@@ -41,9 +41,9 @@
 				<div class="about__column">
 					<div class="item-about">
 						<div class="item-about__icon">
-							<img src="img/about/3.png" alt="">
+							<img src="img/about/03.png" alt="">
 						</div>
-						<div class="item-about__title">WEB</div>
+						<div class="item-about__title">Marketing</div>
 						<div class="item-about__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime
 							repudiandae doloribus fuga aliquid aliquam itaque ducimus quam, accusamus blanditiis perspiciatis.
 						</div>
